--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "A repo to get started with Test Driven Development",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0"
   }
 }
